--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </nav>
         <h2 class="header">Haffy Kitchen</h2>
         <br>
-        <p class="low"> Welcome to haffy kitchen, <br> we offer both intercontinental <br>and local dishes and are affordable.</p>
-        <p class="image"><img src="./image/Logo.png" width="600px" height="400px" alt="image"></p>
+        <p class="low"> Welcome to haffy kitchen, <br> we offer both local and intercontinental dishes.</p>
+        <p class="image"><img src="./image/HaffynKitchen.png" width="600px" height="400px" alt="image"></p>
     </div>
     <br>
     <br>
@@ -31,7 +31,7 @@
             <li><img src="./image/pexels-jane-doan-1099680.jpg" width="400px" alt="logo"></li>
         </ul>
     </div>
-    <p class="love">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error atque odio facilis asperiores! Pariatur facilis ipsa provident aut ea. Mollitia quae tenetur nemo libero vel sequi, doloremque, enim laudantium minus ullam praesentium hic! Cum aut, porro nostrum inventore harum sint eius, sed atque quis cumque quisquam vel, in dignissimos rem veritatis quaerat. Totam illum natus, repellat officiis vero quam impedit non rem corrupti nisi laboriosam iste blanditiis qui quae quod doloribus debitis dolorem voluptatibus. Debitis provident adipisci earum. Error, ex? Nobis recusandae, hic quos tempora quod perferendis distinctio unde, perspiciatis suscipit adipisci ipsa velit rem molestias itaque, maiores iste sunt!</p>
+    <p class="love"> Haffy kitchen brand embodies quality, innovation, and functionality. It delivers durable products with versatile styles, catering to diverse lifestyles. Trustworthy and reliable, the brand prioritizes sustainability and customization, while ensuring customer satisfaction through exceptional support. With affordability, ergonomic features, and a rich heritage, the brand collaborates with experts to offer seamless integration and safety. It promotes accessibility, optimizes space, and saves time with inspirational and unique designs. Attention to detail, a global presence, and professional-grade offerings define the brand. Streamlined and user-friendly, it embraces family-friendly and multifunctional solutions, ensuring enduring value and timeless appeal.</p>
     <div class="key">
         <h3>Call to action! it's time</h3>
         <p> Signup with us now</p>
