--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <p> Signup with us now</p>
         <p class="last">Signup</p>
     </div>
+    <p class="copy">copyright&copy; The odin project 2023</p>
 </body>
 </html>
